styles/style.css
/* ... */
h1 {
  font-family: "Cageroll-Standard";
  font-size: 2rem;
  margin-bottom: 10px;
  letter-spacing: 1px;
  text-transform: uppercase;
}

h1 span {
  border: 1px solid rgba(0, 0, 0, 0.3);
  padding: 10px 20px;
}

h2 {
  font-size: 1.5rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
}

h3 {
  font-size: 1.2rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 500;
}

.emp {
  font-family: Cageroll-Standard;
  font-size: 2rem;
}

.emp-2 {
  font-family: "Cageroll-Standard";
  font-size: 1.5rem;
}

/* ! Navigation */

.burger {
  display: none;
}

nav {
  top: 0;
  position: fixed;
  text-align: center;
  padding: 20px;
  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
  background-color: rgba(0, 0, 0, 0.1);
  display: flex;
  justify-content: space-between;
  align-items: center;
  flex-direction: row;
  width: 100%;
}

nav a {
  margin: 10px;
  background-color: rgba(255, 255, 255, 1);
  padding: 7px 20px;
  color: rgba(0, 0, 0, 0.7);
  border-radius: 100px;
}

nav span a {
  border-bottom: 1px solid rgba(0, 0, 0, 0.7);
  background-color: rgba(255, 255, 255, 0);
  border-radius: 0px;
  padding: 0px 0px;
}

/* ? Navigation on Phone Screen */

@media only screen and (max-width: 600px) {
  nav {
    top: 0;
    position: relative;
    /* display: flex; */
    padding: 0px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
    background-color: rgba(0, 0, 0, 0.1);
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }

  .nav-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    margin: 10px;
    padding: 0 15px;
  }

  #nav-links {
    /* flex-basis: 100%; */
    width: 100%;
  }

  #nav-links a {
    display: block;
    /* float: left; */
    margin: 1px 0 0 0;
    padding: 10px;
    border-radius: 0px;
    background-color: rgba(255, 255, 255, 0.8);
  }

  /* nav.responsive {
    display: flex;
    justify-content: space-between;
    align-items: center;
    flex-direction: column;
  } */

  /* nav a {
    display: block;
    float: left;
    margin: 10px;
    background-color: rgba(255, 255, 255, 1);
    padding: 7px 20px;
    color: rgba(0, 0, 0, 0.7);
    border-radius: 100px;
  } */

  #nav-links a {
    display: none;
  }
  .nav-top a.burger {
    display: inline-flex;
    float: right;
    background: none;
    padding: 0;
  }

  #nav-links.responsive a {
    /* float: none; */
    display: block;
    /* text-align: left; */
  }

  nav span a {
    border-bottom: 1px solid rgba(0, 0, 0, 0.7);
    background-color: rgba(255, 255, 255, 0);
    border-radius: 0px;
    padding: 0px 0px;
  }
}

/* ? Sections */

/* ! Top */

.top {
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  background: rgba(255, 255, 255, 1);
  /* background: linear-gradient(
    180deg,
    rgb(0, 72, 255) 0%,
    rgb(0, 4, 224) 50%,
    rgb(0, 46, 131) 100%
  ); */
  /* border-bottom: 1px solid rgba(0, 0, 0, 0.5); */
}

/* Top */

.profile-pic {
  border-radius: 300px;
  width: calc(100% / 4 - 20px);
  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
  margin: 30px 50px 30px 30px;
  border: 0px solid rgb(0, 0, 0, 0.5);
  background-color: white;
}

.label {
  position: absolute;
  padding: 10px;
  border: 0.5px solid rgba(0, 0, 0, 0.3);
  margin-top: -4px;
  margin-left: -1px;
  transform: translateY(-100%);
  background-color: rgba(255, 255, 255, 1);
}

#about {
  background-color: rgba(255, 255, 255, 0);
  padding: 30px;
  margin: 0 auto;
  width: calc(100% / 2.5);
  box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: space-around;
  align-items: center;
  border: 0.5px solid rgb(0, 0, 0, 0.2);
  border-radius: 0px;
}

.about-text {
  border-left: 1px solid rgba(0, 0, 0, 0.5);
  padding-left: 40px;
  color: rgb(0, 0, 0);
}

#headline {
  background-color: rgba(0, 0, 0, 0.1);
  /* padding: 30px; */
  margin: 0 auto;
  width: calc(100% / 2.5);
  border: 0.1px solid rgb(0, 0, 0, 0.1);
  border-radius: 0px;
}

.headline-text {
  padding: 30px;
  color: rgb(0, 0, 0);
  /* background-color: rgba(255, 255, 255, 1); */
}

hr.about {
  margin: 20px 0px 20px 0px;
  border: 0px solid rgba(0, 0, 0, 0.5);
  border-radius: 5px;
  background-color: rgba(0, 0, 0, 0.5);
  height: 1px;
  max-width: 70%;
}

/* .icons {
  margin-top: 20px;
} */
.icons img {
  width: 50px;
}

/* ? Top on Phone Screen */

@media only screen and (max-width: 600px) {
  .top {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    height: auto;
  }
  .profile-pic {
    border-radius: 300px;
    width: calc(100% / 2);
    box-shadow: 1px 1px 20px rgba(0, 0, 0, 0.2);
    margin: 10px 30px 40px 30px;
    border: 0px solid rgb(0, 0, 0, 0.5);
    background-color: white;
  }
  #about {
    padding: 30px;
    margin: 0px 0px 100px 0px;
    width: 100%;
    box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.1);
    display: flex;
    justify-content: space-around;
    align-items: center;
    flex-direction: column;
    border: 0px solid rgb(0, 0, 0, 0.2);
  }

  .about-text {
    border-top: 1px solid rgba(0, 0, 0, 0.5);
    border-left: none;
    padding: 20px 0px 0px 20px;
  }

  #headline {
    width: 100%;
    margin: 0 auto;
  }
}

/* ! Software Engineering Stack */

.stack {
  height: 100vh;
  background-color: rgba(0, 0, 0, 0.3);
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  background: rgb(255, 255, 255);
  /* margin: 0 auto; */
}

.stack #about {
  background-color: rgb(0, 0, 0, 0.1);
  display: flex;
  justify-content: center;
  flex-direction: column;
}

#about.stack-class {
  width: calc(100% / 1.8);
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0);
  border: 1px solid rgba(0, 0, 0, 0.1);
}
/* ... */

